force-app/main/default/objects/Account/fields/AccCountry__c.field-meta.xml
<CustomField>
    <fullName>AccCountry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>