force-app/main/default/objects/Account/fields/AccountsReceivableExchangeTimestamp__c.field-meta.xml
<CustomField>
    <fullName>AccountsReceivableExchangeTimestamp__c</fullName>
    <label>Accounts Receivable Exchange Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>