force-app/main/default/objects/Account/fields/AccountsReceivableLastSync__c.field-meta.xml
<CustomField>
    <fullName>AccountsReceivableLastSync__c</fullName>
    <label>Accounts Receivable Last Sync</label>
    <type>DateTime</type>
</CustomField>