force-app/main/default/objects/Account/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Account Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stockist/Distributor</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>EPC/MEP</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Lobbyist</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>