force-app/main/default/objects/Account/fields/All_Market_Segments__c.field-meta.xml
<CustomField>
    <fullName>All_Market_Segments__c</fullName>
    <label>All Market Segments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00002</fullName>
                <label>MENA</label>
            </value>
            <value>
                <fullName>00001</fullName>
                <label>Americas</label>
            </value>
            <value>
                <fullName>00004</fullName>
                <label>Europe</label>
            </value>
            <value>
                <fullName>00010</fullName>
                <label>CIS</label>
            </value>
            <value>
                <fullName>00011</fullName>
                <label>Ukraine</label>
            </value>
            <value>
                <fullName>00016</fullName>
                <label>Customs Union</label>
            </value>
            <value>
                <fullName>00006</fullName>
                <label>KLW</label>
            </value>
            <value>
                <fullName>00019</fullName>
                <label>Vallourec</label>
            </value>
            <value>
                <fullName>00005</fullName>
                <label>IPS</label>
            </value>
            <value>
                <fullName>00020</fullName>
                <label>ETA</label>
            </value>
            <value>
                <fullName>00021</fullName>
                <label>Machinery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>