force-app/main/default/objects/Account/fields/BlockDate__c.field-meta.xml
<CustomField>
    <fullName>BlockDate__c</fullName>
    <label>Block Date</label>
    <type>Date</type>
</CustomField>