force-app/main/default/objects/Account/fields/ClosedLost__c.field-meta.xml
<CustomField>
    <fullName>ClosedLost__c</fullName>
    <label>Closed Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>