force-app/main/default/objects/Account/fields/ClosedLostPercent__c.field-meta.xml
<CustomField>
    <fullName>ClosedLostPercent__c</fullName>
    <formula>ClosedLost__c / OppsCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Lost (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>