force-app/main/default/objects/Account/fields/ClosedWonOpps__c.field-meta.xml
<CustomField>
    <fullName>ClosedWonOpps__c</fullName>
    <label>Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>