force-app/main/default/objects/Account/fields/ClosedWonPercent__c.field-meta.xml
<CustomField>
    <fullName>ClosedWonPercent__c</fullName>
    <formula>ClosedWonOpps__c / OppsCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>