force-app/main/default/objects/Account/fields/Conforming__c.field-meta.xml
<CustomField>
    <fullName>Conforming__c</fullName>
    <description>Used for &apos;Competitor&apos; record type</description>
    <label>Conforming</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>SMLS</fullName>
            </value>
            <value>
                <fullName>WLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>