force-app/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>IF(FIND(&apos;,&apos;,BillingCountry)&gt;0, UPPER(MID(BillingCountry,1,FIND(&apos;,&apos;,BillingCountry)-1)), UPPER(BillingCountry))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>