force-app/main/default/objects/Account/fields/CountryId__c.field-meta.xml
<CustomField>
    <fullName>CountryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CountryId</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Accounts (CountryId)</relationshipLabel>
    <relationshipName>Account_CountryId</relationshipName>
    <type>Lookup</type>
</CustomField>