force-app/main/default/objects/Account/fields/CurrentMonthReceipts__c.field-meta.xml
<CustomField>
    <fullName>CurrentMonthReceipts__c</fullName>
    <label>Current Month Receipts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>