force-app/main/default/objects/Account/fields/CustomerPortalEnabled__c.field-meta.xml
<CustomField>
    <fullName>CustomerPortalEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>