force-app/main/default/objects/Account/fields/DDPAddress__c.field-meta.xml
<CustomField>
    <fullName>DDPAddress__c</fullName>
    <label>Delivery Address</label>
    <type>Address</type>
</CustomField>