force-app/main/default/objects/Account/fields/DealingStatus__c.field-meta.xml
<CustomField>
    <fullName>DealingStatus__c</fullName>
    <label>Dealing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DealingStatuses</valueSetName>
    </valueSet>
</CustomField>