force-app/main/default/objects/Account/fields/DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTerms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Delivery Terms</label>
    <referenceTo>DeliveryTerms__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>