force-app/main/default/objects/Account/fields/EDRPOU__c.field-meta.xml
<CustomField>
    <fullName>EDRPOU__c</fullName>
    <label>EDRPOU</label>
    <length>25</length>
    <type>Text</type>
</CustomField>