force-app/main/default/objects/Account/fields/First_Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Sales_Date__c</fullName>
    <formula>DATEVALUE(FirstSalesDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Sales Date</label>
    <type>Date</type>
</CustomField>