force-app/main/default/objects/Account/fields/FirstOpportunityWonDate__c.field-meta.xml
<CustomField>
    <fullName>FirstOpportunityWonDate__c</fullName>
    <formula>DATEVALUE(FirstWonOppDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Opportunity Won Date</label>
    <type>Date</type>
</CustomField>