force-app/main/default/objects/Account/fields/FirstSalesDate__c.field-meta.xml
<CustomField>
    <fullName>FirstSalesDate__c</fullName>
    <label>FirstSalesDate__c</label>
    <type>DateTime</type>
</CustomField>