force-app/main/default/objects/Account/fields/FirstWonOppDate__c.field-meta.xml
<CustomField>
    <fullName>FirstWonOppDate__c</fullName>
    <label>FirstWonOppDate__c</label>
    <type>DateTime</type>
</CustomField>