force-app/main/default/objects/Account/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <description>Full company name that is used in official documents.</description>
    <inlineHelpText>Full company name that is used in official documents.</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>