force-app/main/default/objects/Account/fields/GenerallyOrdered__c.field-meta.xml
<CustomField>
    <fullName>GenerallyOrdered__c</fullName>
    <label>Generally Ordered, t</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>