force-app/main/default/objects/Account/fields/GeolocationLatitude__c.field-meta.xml
<CustomField>
    <fullName>GeolocationLatitude__c</fullName>
    <formula>Text(Geolocation__Latitude__s)</formula>
    <label>Geolocation Latitude</label>
    <type>Text</type>
</CustomField>