force-app/main/default/objects/Account/fields/GeolocationLongitude__c.field-meta.xml
<CustomField>
    <fullName>GeolocationLongitude__c</fullName>
    <formula>Text( Geolocation__Longitude__s)</formula>
    <label>Geolocation Longitude</label>
    <type>Text</type>
</CustomField>