force-app/main/default/objects/Account/fields/GroupPastDueDebt15More__c.field-meta.xml
<CustomField>
    <fullName>GroupPastDueDebt15More__c</fullName>
    <label>Group Past Due Debt (over 15 days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>