force-app/main/default/objects/Account/fields/GroupPastDueDebt__c.field-meta.xml
<CustomField>
    <fullName>GroupPastDueDebt__c</fullName>
    <label>Group Past Due Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>