force-app/main/default/objects/Account/fields/HoldingGroup__c.field-meta.xml
<CustomField>
    <fullName>HoldingGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Holding Group</label>
    <referenceTo>AccountHoldingGroups__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>