force-app/main/default/objects/Account/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <formula>IF (ISBLANK(ID_ERP__c),0, VALUE(ID_ERP__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>