force-app/main/default/objects/Account/fields/IndustrySubcategory__c.field-meta.xml
<CustomField>
    <fullName>IndustrySubcategory__c</fullName>
    <label>Industry Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry</controllingField>
        <restricted>true</restricted>
        <valueSetName>IndustrySubcategories</valueSetName>
    </valueSet>
</CustomField>