force-app/main/default/objects/Account/fields/IPN__c.field-meta.xml
<CustomField>
    <fullName>IPN__c</fullName>
    <label>IPN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>