force-app/main/default/objects/Account/fields/IsGroup__c.field-meta.xml
<CustomField>
    <fullName>IsGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGroup</label>
    <type>Checkbox</type>
</CustomField>