force-app/main/default/objects/Account/fields/IsHoldingHead__c.field-meta.xml
<CustomField>
    <fullName>IsHoldingHead__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Holding Head</label>
    <type>Checkbox</type>
</CustomField>