force-app/main/default/objects/Account/fields/IsSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSupplier</label>
    <type>Checkbox</type>
</CustomField>