force-app/main/default/objects/Account/fields/IsVirtual__c.field-meta.xml
<CustomField>
    <fullName>IsVirtual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Virtual</label>
    <type>Checkbox</type>
</CustomField>