force-app/main/default/objects/Account/fields/Last_Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Date__c</fullName>
    <formula>DATEVALUE(LastSalesDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Sales Date</label>
    <type>Date</type>
</CustomField>