force-app/main/default/objects/Account/fields/LastSalesDate__c.field-meta.xml
<CustomField>
    <fullName>LastSalesDate__c</fullName>
    <label>LastSalesDate__c</label>
    <type>DateTime</type>
</CustomField>