force-app/main/default/objects/Account/fields/LastWonOppDate__c.field-meta.xml
<CustomField>
    <fullName>LastWonOppDate__c</fullName>
    <label>Last Opportunity Won Date</label>
    <type>Date</type>
</CustomField>