force-app/main/default/objects/Account/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>IF(
  AND (
    NOT ISBLANK(BillingCountry),
    NOT ISBLANK(BillingCity) 
  ), UPPER(BillingCountry) + &apos;, &apos; + BillingCity,
    IF(
      AND (
        NOT ISBLANK(BillingCountry),
        ISBLANK(BillingCity) 
      ), UPPER(BillingCountry),
      IF(
        AND (
          ISBLANK(BillingCountry),
          NOT ISBLANK(BillingCity) 
        ), BillingCity, &apos;&apos;
	  )
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>