force-app/main/default/objects/Account/fields/ManagersCount__c.field-meta.xml
<CustomField>
    <fullName>ManagersCount__c</fullName>
    <label>Managers Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>