force-app/main/default/objects/Account/fields/MetaphoneAlternate__c.field-meta.xml
<CustomField>
    <fullName>MetaphoneAlternate__c</fullName>
    <label>Metaphone Alternate</label>
    <length>80</length>
    <type>Text</type>
</CustomField>