force-app/main/default/objects/Account/fields/MetaphonePrimary__c.field-meta.xml
<CustomField>
    <fullName>MetaphonePrimary__c</fullName>
    <label>Metaphone Primary</label>
    <length>80</length>
    <type>Text</type>
</CustomField>