force-app/main/default/objects/Account/fields/NPS_Num__c.field-meta.xml
<CustomField>
    <fullName>NPS_Num__c</fullName>
    <formula>VALUE(NPS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>