force-app/main/default/objects/Account/fields/NYSIIS__c.field-meta.xml
<CustomField>
    <fullName>NYSIIS__c</fullName>
    <label>NYSIIS Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>