force-app/main/default/objects/Account/fields/NYSIISFirstCode__c.field-meta.xml
<CustomField>
    <fullName>NYSIISFirstCode__c</fullName>
    <label>NYSIIS First Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>