force-app/main/default/objects/Account/fields/OD_max__c.field-meta.xml
<CustomField>
    <fullName>OD_max__c</fullName>
    <description>Maximum outside diameter in millimeters, that the competitor is able to produce.</description>
    <inlineHelpText>Maximum outside diameter in millimeters, that the competitor is able to produce.</inlineHelpText>
    <label>OD (max)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>