force-app/main/default/objects/Account/fields/OD_min__c.field-meta.xml
<CustomField>
    <fullName>OD_min__c</fullName>
    <description>Minimum outside diameter in millimeters, that the competitor is able to produce.</description>
    <inlineHelpText>Minimum outside diameter in millimeters, that the competitor is able to produce.</inlineHelpText>
    <label>OD (min)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>