force-app/main/default/objects/Account/fields/OppsCount__c.field-meta.xml
<CustomField>
    <fullName>OppsCount__c</fullName>
    <label>Opportunities Count</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>