force-app/main/default/objects/Account/fields/OrdersCount__c.field-meta.xml
<CustomField>
    <fullName>OrdersCount__c</fullName>
    <label>Orders Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>