force-app/main/default/objects/Account/fields/OurShare__c.field-meta.xml
<CustomField>
    <fullName>OurShare__c</fullName>
    <label>Our Sales Share</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>