force-app/main/default/objects/Account/fields/OwnerActivityStatus__c.field-meta.xml
<CustomField>
    <fullName>OwnerActivityStatus__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Activity Status</label>
    <type>Checkbox</type>
</CustomField>