force-app/main/default/objects/Account/fields/Parent_Account_Specified__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Specified__c</fullName>
    <formula>ParentId  &lt;&gt; NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Specified</label>
    <type>Checkbox</type>
</CustomField>