force-app/main/default/objects/Account/fields/PastDueDebt__c.field-meta.xml
<CustomField>
    <fullName>PastDueDebt__c</fullName>
    <label>Past Due Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>