force-app/main/default/objects/Account/fields/Payment_Terms_v2__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_v2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Payment Terms</label>
    <referenceTo>PaymentTerms__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>