force-app/main/default/objects/Account/fields/PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PaymentTerms__c</fullName>
    <description>Invoice payment terms and conditions for the customer</description>
    <inlineHelpText>invoice payment terms and conditions for the customer</inlineHelpText>
    <label>Payment Terms (not use)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentTerms</valueSetName>
    </valueSet>
</CustomField>