force-app/main/default/objects/Account/fields/PermissionComment__c.field-meta.xml
<CustomField>
    <fullName>PermissionComment__c</fullName>
    <label>Permission Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>