force-app/main/default/objects/Account/fields/PermissionDate__c.field-meta.xml
<CustomField>
    <fullName>PermissionDate__c</fullName>
    <label>Permission Date</label>
    <type>Date</type>
</CustomField>