force-app/main/default/objects/Account/fields/PermittedById__c.field-meta.xml
<CustomField>
    <fullName>PermittedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>