force-app/main/default/objects/Account/fields/PermittedProductionAmount__c.field-meta.xml
<CustomField>
    <fullName>PermittedProductionAmount__c</fullName>
    <label>Permitted Production Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>