force-app/main/default/objects/Account/fields/PermittedShipmentAmount__c.field-meta.xml
<CustomField>
    <fullName>PermittedShipmentAmount__c</fullName>
    <label>Permitted Shipment Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>