force-app/main/default/objects/Account/fields/Phone_Is_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Phone_Is_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone_Is_Invalid</label>
    <type>Checkbox</type>
</CustomField>