force-app/main/default/objects/Account/fields/Phonetic_Code__c.field-meta.xml
<CustomField>
    <fullName>Phonetic_Code__c</fullName>
    <label>Phonetic Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>