force-app/main/default/objects/Account/fields/PhoneticCode__c.field-meta.xml
<CustomField>
    <fullName>PhoneticCode__c</fullName>
    <label>Phonetic Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>