force-app/main/default/objects/Account/fields/Prod_Plan_Visible__c.field-meta.xml
<CustomField>
    <fullName>Prod_Plan_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prod. Plan Visible</label>
    <type>Checkbox</type>
</CustomField>