force-app/main/default/objects/Account/fields/ProductionCapacity__c.field-meta.xml
<CustomField>
    <fullName>ProductionCapacity__c</fullName>
    <description>Summary production capacity (Mt/year)</description>
    <inlineHelpText>Summary production capacity (Mt/year)</inlineHelpText>
    <label>Production Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>