force-app/main/default/objects/Account/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>Competitor&apos;s products assortment</description>
    <label>Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>