force-app/main/default/objects/Account/fields/SalesEffectivity__c.field-meta.xml
<CustomField>
    <fullName>SalesEffectivity__c</fullName>
    <formula>ROUND(TotalMarginSum__c/TotalAmountSum__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin, %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>