force-app/main/default/objects/Account/fields/SanctionDescr__c.field-meta.xml
<CustomField>
    <fullName>SanctionDescr__c</fullName>
    <label>Sanction Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>