force-app/main/default/objects/Account/fields/ScrapSupplierType__c.field-meta.xml
<CustomField>
    <fullName>ScrapSupplierType__c</fullName>
    <formula>IF(
  AND(
    IsSupplier__c,
    OR(
      ISPICKVAL(Type, &apos;Inner Firm&apos;),
      CONTAINS(UPPER(Name), &apos;ВЗЦ&apos;)
    )
  ),
  &apos;CORPORATE&apos;,
  IF(
    AND(
      IsSupplier__c,
      OR(
        $RecordType.DeveloperName = &apos;Scrap_Supplier&apos;,
        AND(
          $RecordType.DeveloperName = &apos;Customer&apos;,
          NOT(ISPICKVAL(Type, &apos;Inner Firm&apos;))
        )
      )
    ),
    &apos;COMMERCIAL&apos;,
    &apos;&apos;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Тип постачальника</label>
    <type>Text</type>
</CustomField>