force-app/main/default/objects/Account/fields/Shortened_Name__c.field-meta.xml
<CustomField>
    <fullName>Shortened_Name__c</fullName>
    <label>Shortened Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>