force-app/main/default/objects/Account/fields/SoundexAllWords__c.field-meta.xml
<CustomField>
    <fullName>SoundexAllWords__c</fullName>
    <label>Soundex All Words</label>
    <length>80</length>
    <type>Text</type>
</CustomField>