force-app/main/default/objects/Account/fields/SoundexFirst3Letters__c.field-meta.xml
<CustomField>
    <fullName>SoundexFirst3Letters__c</fullName>
    <label>Soundex First 3 Letters</label>
    <length>80</length>
    <type>Text</type>
</CustomField>