force-app/main/default/objects/Account/fields/SoundexFirstWord__c.field-meta.xml
<CustomField>
    <fullName>SoundexFirstWord__c</fullName>
    <label>Soundex First Word</label>
    <length>80</length>
    <type>Text</type>
</CustomField>