force-app/main/default/objects/Account/fields/SoundexGroup__c.field-meta.xml
<CustomField>
    <fullName>SoundexGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Soundex Group</label>
    <referenceTo>AccountSoundexGroup__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>