force-app/main/default/objects/Account/fields/StopListRisk__c.field-meta.xml
<CustomField>
    <fullName>StopListRisk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>An indicator, than the account is going to be put to the stop list in less than 7 days</description>
    <label>Stop List Risk</label>
    <type>Checkbox</type>
</CustomField>