force-app/main/default/objects/Account/fields/TotalAmountSum__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountSum__c</fullName>
    <label>Total Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>