force-app/main/default/objects/Account/fields/TotalMarginSum__c.field-meta.xml
<CustomField>
    <fullName>TotalMarginSum__c</fullName>
    <label>Total Margin</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>