force-app/main/default/objects/Account/fields/Under_Sanctions__c.field-meta.xml
<CustomField>
    <fullName>Under_Sanctions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Sanctions</label>
    <type>Checkbox</type>
</CustomField>