force-app/main/default/objects/Account/fields/WHC__c.field-meta.xml
<CustomField>
    <fullName>WHC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Warehouse Contractor</label>
    <type>Checkbox</type>
</CustomField>