force-app/main/default/objects/Account/fields/WT_max__c.field-meta.xml
<CustomField>
    <fullName>WT_max__c</fullName>
    <description>Maximum tube wall thickness in millimeters, that the competitor is able to produce.</description>
    <inlineHelpText>Maximum tube wall thickness in millimeters, that the competitor is able to produce.</inlineHelpText>
    <label>WT (max)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>