force-app/main/default/objects/Account/fields/WT_min__c.field-meta.xml
<CustomField>
    <fullName>WT_min__c</fullName>
    <description>Minimum tube wall thickness in millimeters, that the competitor is able to produce.</description>
    <inlineHelpText>Minimum tube wall thickness in millimeters, that the competitor is able to produce.</inlineHelpText>
    <label>WT (min)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>