force-app/main/default/objects/Account/fields/ZKPO__c.field-meta.xml
<CustomField>
    <fullName>ZKPO__c</fullName>
    <label>ZKPO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>