force-app/main/default/objects/Account/recordTypes/CorporateGroup.recordType-meta.xml
<RecordType>
    <fullName>CorporateGroup</fullName>
    <active>true</active>
    <label>Corporate Group</label>
</RecordType>