force-app/main/default/objects/Account/recordTypes/Scrap_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Scrap_Supplier</fullName>
    <active>true</active>
    <label>Scrap Supplier</label>
</RecordType>