force-app/main/default/objects/Account/validationRules/ACTIVE_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>ACTIVE_Account</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Activity_Type__c,&apos;1&apos;),
  OR(
    ISPICKVAL(Industry,&apos;&apos;), 
    ISBLANK(Website)
  ),
  NOT($Profile.Name = &quot;System Administrator&quot;),
  NOT($Profile.Name = &quot;ERP Integration Service&quot;)
)</errorConditionFormula>
    <errorMessage>You must specify values in the &quot;Industry&quot; and &quot;Website&quot; fields for ACTIVE Account</errorMessage>
</ValidationRule>