force-app/main/default/objects/Account/validationRules/Do_not_update_Virtual_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_update_Virtual_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Type), &quot;Virtual&quot;) &amp;&amp;  
ISCHANGED(Type) &amp;&amp; 
$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
$Profile.Name &lt;&gt; &quot;ERP Integration Service&quot;</errorConditionFormula>
    <errorMessage>You do not have access to update Virtual type</errorMessage>
</ValidationRule>